Remove redundant heading from the start screen in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="Startscreen">
     <h1>Vampirio</h1>
-    <h2>Startscreen</h2>
+    hahaahahaha
     <button id="start" onclick="">Fortsetzen</button>
   </div>
 <script src ="index.js">
